# nix-home

./: README.md  common.nix  environment.nix  home-macos.nix  home-nixos.nix  linux.nix  macos.nix  yabai.nix
home/: ghci
programs/alacritty/: default.nix
programs/git/: default.nix  gitattributes  ignore
programs/kitty/: default.nix  scrollback.sh
programs/neovim/: coc-settings.json  coc.vim  config.vim  custom-plugins.nix  dashboard.lua  default.nix  haskell.vim  keymap.vim  lspconfig.lua  mini.lua  neorg.lua  nvim-cmp.lua  nvim-tree.lua  plugins.nix  ruby-code-actions.lua  rust-tools.lua  status.vim  theme.vim  treesitter.lua  vsnip.vim
programs/neovim/ftplugin/: haskell.vim
programs/rofi/: default.nix
programs/st/: st-custom-0.8.4.diff  st-fira-code.diff  st-newterm.diff
programs/tmux/: default.nix
programs/vim/: vimrc
programs/zsh/: default.nix  zshrc
services/dunst/: default.nix
services/polybar/: default.nix
services/protonmail-bridge/: default.nix
services/spotifyd/: default.nix
services/stalonetray/: default.nix
services/trayer/: default.nix  trayer.nix
xmobar/: default.nix  xmobarrc.hs
xmobar/resources/icons/: default.nix  gen-load-icons.pl  load_0.xpm  load_1.xpm  load_2.xpm  load_3.xpm  load_4.xpm  load_5.xpm  load_6.xpm  load_7.xpm  load_8.xpm
xmonad/: Makefile  build  build.nix  default.nix  hie.yaml  my-xmonad.cabal  release.nix  shell.nix  xmobarrc  xmonad-config.cabal
xmonad/lib/: CenteredIfSingle.hs  Colors.hs  Keys.hs  Layout.hs  Logging.hs  Managers.hs  Paths.hs  Workspaces.hs  xmonad.hs
(+1 files in other folders)
