name:                xmonad-config
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-x86_64-linux
  main-is:             xmonad.hs
  other-modules:       Workspaces, Keys, Logging, Layout, Managers, Colors, Paths
  build-depends:       base
                     , containers
                     , xmobar >= 0.36
                     , xmonad >= 0.15
                     , xmonad-contrib >= 0.17
                     , X11
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -threaded
